# core-error

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: error_trait.rs  lib.rs  typeinfo.rs
