[package]
name = "core-error"
description = "std::error::Error for libcore"
readme = "README.md"
repository = "https://github.com/core-error/core-error"
categories = ["no-std"]
keywords = ["error", "no_std", "core"]
license = "MIT OR Apache-2.0"
version = "0.0.1-rc4"
authors = ["roblabla <unfiltered@roblab.la>"]
build = "build.rs"

[build-dependencies]
version_check = "0.9"

[features]
default = []
alloc = []
std = []
